--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,7 +4,11 @@
 
   <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05)">
     © 2021 Copyright:
-    <a class="text-reset fw-bold" href="https://mdbootstrap.com/">Sprinfield</a>
+    <a
+      class="text-reset fw-bold"
+      href="https://es.wikipedia.org/wiki/Springfield_(Los_Simpson)"
+      >Sprinfield</a
+    >
     <img
       class="navbar-brand mx-5"
       id="logo"
