--- a/src/app/modules/productos/general/general.component.html
+++ b/src/app/modules/productos/general/general.component.html
@@ -17,6 +17,7 @@
           (delete)="eliminar()"
           (fav)="favoritos()"
           (productModal)="infoModal($event)"
+          (productShop)="addToShop($event)"
         ></app-main>
         <app-modal [productModal]="dataModal"></app-modal>
       </div>
