--- a/src/app/modules/shop/generalShop/generalShop.component.html
+++ b/src/app/modules/shop/generalShop/generalShop.component.html
@@ -1,7 +1,17 @@
 <div class="container-fluid">
   <div class="row text-center bg-light g-5 my-5">
-    <div class="col-12">
-      <p class="display-3"><strong>Shop</strong></p>
+    <div class="col-12" *ngFor="let shopProduct of myCart">
+      <p class="display-3">
+        {{ shopProduct.product }}
+      </p>
+      <div class="col-12">
+        <img [src]="shopProduct.image" />
+      </div>
+      <div class="col-12 py-5">
+        <button class="btn btn-secondary" (click)="deleteShop()">
+          Delete Item
+        </button>
+      </div>
     </div>
   </div>
 </div>
