--- a/src/app/modules/productos/main/main.component.html
+++ b/src/app/modules/productos/main/main.component.html
@@ -11,9 +11,34 @@
     </div>
 
     <div class="col-6">
-      <div class="row bor">
+      <div class="row">
         <div class="col-12 py-3">
-          <h3>{{ pSeleccion.product }}</h3>
+          <h3 class="row">
+            {{ pSeleccion.product }}
+            <button
+              type="button"
+              class="col-2 btn btn-outline-danger"
+              (click)="infoShop(pSeleccion)"
+            >
+              <!--*ngFor="let shopProducts of pSeleccion?.product"-->
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="currentColor"
+                class="bi bi-cart-plus"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9V5.5z"
+                />
+                <path
+                  d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zm3.915 10L3.102 4h10.796l-1.313 7h-8.17zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"
+                />
+              </svg>
+            </button>
+          </h3>
+
           <button
             type="button"
             class="btn btn-outline-danger"
@@ -82,7 +107,7 @@
           class="col-6 d-flex btn"
           data-bs-toggle="modal"
           data-bs-target="#similarModal"
-          *ngFor="let similarProducts of pSeleccion.similarProducts"
+          *ngFor="let similarProducts of pSeleccion?.similarProducts"
           (click)="infoModal(similarProducts)"
         >
           <div class="icon-square text-dark me-3">
@@ -118,7 +143,7 @@
   <div class="row">
     <div class="col-12">
       <h1 class="p-4"><u>Reviews</u></h1>
-      <div class="row p-4" *ngFor="let review of pSeleccion.reviews">
+      <div class="row p-4" *ngFor="let review of pSeleccion?.reviews">
         <div class="col-3">
           <img id="avatar" src="{{ review.image }}" alt="" />
         </div>
@@ -148,6 +173,9 @@
         </div>
         <div class="col-6">
           <p id="rFont" class="my-2">{{ review.opinion }}</p>
+          <p id="rFont" class="my-2"></p>
+          <p id="rFont" class="my-2">{{ review.date | date : "short" }}</p>
+          <!--<p {{ data | json }} >-->
         </div>
       </div>
     </div>
