--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -9,19 +9,21 @@
   <div class="navbar-collapse">
     <ul class="navbar-nav ms-auto">
       <li class="nav-item p-2 border-end">
-        <a routerLink="/productos" class="nav-link active" id="navlink" href="#"
-          >Home</a
-        >
+        <a routerLink="/productos" class="nav-link active" id="navlink">Home</a>
       </li>
       <li class="nav-item p-2 border-end">
-        <a routerLink="/about" class="nav-link" href="#">About</a>
+        <a routerLink="/about" class="nav-link">About</a>
       </li>
       <li class="nav-item p-2 border-end">
-        <a routerLink="/shop" class="nav-link" href="#">Shop</a>
+        <a routerLink="/shop" class="nav-link">Shop</a>
+      </li>
+      <li class="nav-item p-2 border-end">
+        <a routerLink="/addNewProduct" class="nav-link">Add Product</a>
       </li>
       <li class="nav-item p-2">
-        <a routerLink="/shop" class="nav-link" href="#">Help</a>
+        <a routerLink="/help" class="nav-link">Help</a>
       </li>
+
       <li class="nav-item py-3 mx-4">
         <button class="bg-secondary text-white">Your Cart</button>
       </li>
