--- a/src/app/modules/newproduct/generalNewProduct/newproduct.component.scss
+++ b/src/app/modules/newproduct/generalNewProduct/newproduct.component.scss
@@ -6,3 +6,11 @@
 .card-title {
   font-size: 40px;
 }
+#ImageSim {
+  height: 80%;
+  width: 50%;
+}
+.vl {
+  border-left: 1px solid black;
+  margin: 0 7.5px;
+}
