--- a/src/app/modules/newproduct/generalNewProduct/newproduct.component.html
+++ b/src/app/modules/newproduct/generalNewProduct/newproduct.component.html
@@ -1,15 +1,15 @@
 <div class="container bg-light">
-  <div class="row">
-    <div class="col-12 d-flex justify-content-center">
-      <!--general-->
+  <div class="col-12 d-flex justify-content-center">
+    <!--general-->
 
-      <form
-        class="mt-5"
-        (ngSubmit)="sendUserInfo()"
-        [formGroup]="userForm"
-        autocomplete="off"
-      >
-        <!--productnew-->
+    <form
+      class="mt-5"
+      (ngSubmit)="sendUserInfo()"
+      [formGroup]="userForm"
+      autocomplete="off"
+    >
+      <!--productnew-->
+      <div class="row col-8">
         <div class="col-12 offset-3">
           <h2>Product Info</h2>
         </div>
@@ -83,40 +83,43 @@
         >
           Send
         </button>
-      </form>
-      <!--similar-->
-      <div class="vl"></div>
-      <div class="col-4">
-        <h2>Select Similar</h2>
+      </div>
+      <div class="row col-4"></div>
+      <div class="d-flex col-12">aaa</div>
+    </form>
+    <div clas="row">
+      <div class="col-6 offset-3">
+        <p *ngIf="formValue">{{ formValue | json }}</p>
+      </div>
+    </div>
 
-        <div class="col-12 p-6">
-          <div class="my-4">
-            <div
-              class="col-12 d-flex p-4"
-              *ngFor="let product of productServices; let index = index"
-            >
-              <div class="form-check p-3">
-                <input
-                  class="form-check-input"
-                  type="checkbox"
-                  id="flexCheckDefault"
-                  value="false"
-                />
-              </div>
-              <img id="ImageSim" src="{{ product.image }}" class="p-2" />
+    <div class="vl"></div>
+    <!--similar-->
+    <div class="col-4">
+      <h2>Select Similar</h2>
 
-              <div>
-                <h4 class="p-2">{{ product.product }}</h4>
+      <div class="col-12 p-6">
+        <div class="my-4">
+          <div
+            class="col-12 d-flex p-4"
+            *ngFor="let product of productServices; let index = index"
+          >
+            <div class="form-check p-3">
+              <input
+                class="form-check-input"
+                type="checkbox"
+                id="flexCheckDefault"
+                value="false"
+              />
+            </div>
+            <img id="ImageSim" src="{{ product.image }}" class="p-2" />
 
-                <h6>$ {{ product.price }}</h6>
-              </div>
+            <div>
+              <h4 class="p-2">{{ product.product }}</h4>
+
+              <h6>$ {{ product.price }}</h6>
             </div>
           </div>
-        </div>
-      </div>
-      <div clas="row">
-        <div class="col-6 offset-3">
-          <p *ngIf="formValue">{{ formValue | json }}</p>
         </div>
       </div>
     </div>
