--- a/src/app/modules/productos/main/main.component.html
+++ b/src/app/modules/productos/main/main.component.html
@@ -7,7 +7,7 @@
     [ngClass]="{ favoritos: pSeleccion.favoritos }"
   >
     <div class="col-6">
-      <img class="imagenProd" img src="{{ pSeleccion.image }}" />
+      <img class="imagenProd p-0" img src="{{ pSeleccion.image }}" />
     </div>
 
     <div class="col-6">
