--- a/src/app/modules/productos/aside/aside.component.html
+++ b/src/app/modules/productos/aside/aside.component.html
@@ -1,5 +1,5 @@
 <!--Aside-->
-<aside id="aside">
+<aside id="aside" class="bg-warning h-100">
   <div class="row p-4">
     <input
       type="text"
