--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,5 +1,5 @@
 <!-- navegador -->
-<nav class="navbar navbar-expand">
+<nav class="navbar navbar-expand fondo">
   <img
     class="navbar-brand mx-5"
     id="logo"
