--- a/src/app/modules/shop/generalShop/generalShop.component.html
+++ b/src/app/modules/shop/generalShop/generalShop.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row row-cols 1 row-cols-md-2 mx-10 g-10 text-center bg-light">
-    <div class="col-12" *ngFor="let shopProduct of products; let index = index">
-      <ng-template [ngIf]="contador[index]">
+    <div class="col-md-12" *ngFor="let shopProduct of products; let index = index">
+      <ng-template [ngIf]="contador[index]!=null">
         <p class="display-3">{{ shopProduct.product }} x{{contador[index]}}</p>
         <div class="col-12">
           <img [src]="shopProduct.image" class="card-img" />
